# enerlytica-project

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  MIGRATION_STRATEGY.md  Makefile  OBSERVABILITY.md  README.md  TESTING.md  docker-compose.yml
.github/workflows/: ci.yml
legacy-php/: Dockerfile  security.ini
legacy-php/public/: dashboard.php  index.php  submit-reading.php
legacy-php/src/: PythonApiClient.php
nginx/: default.conf
python-service/: Dockerfile  pyproject.toml
python-service/app/: main.py  seed.py
python-service/app/api/: schemas.py
python-service/app/api/routes/: analytics.py  data_quality.py  health.py  jobs.py  metrics.py  readings.py
python-service/app/application/: analytics_service.py  ingestion_service.py  job_service.py
python-service/app/domain/: aggregation.py  data_quality.py  models.py  validation.py
python-service/app/infrastructure/: database.py  logging.py  metrics.py
python-service/migrations/: env.py
python-service/migrations/versions/: 0001_initial_schema.py  0002_adjust_raw_readings_idempotency_indexes.py
python-service/tests/golden/: expected_daily_consumption.json  input_readings.json  test_characterization_migration.py  test_golden_aggregation.py
python-service/tests/integration/: test_api_flow.py
python-service/tests/unit/: test_aggregation.py  test_app_bootstrap.py  test_data_quality.py  test_health.py  test_idempotency.py  test_metrics.py  test_validation.py
seed/: sample_readings.json  sample_readings_with_errors.json
